# Multi-GASTON

./: README.md  environment.yml  pyproject.toml
demo/: livm_meta.xlsx  visiumHD_tutorial.ipynb
demo/.ipynb_checkpoints/: visiumHD_tutorial-checkpoint.ipynb
demo/16_villi/: final_LP_apical_coord.csv  final_crypt_tip_coord.csv
demo/16_villi/lasso0.001/rep0/: 10000_coordinate.txt  15000_coordinate.txt  5000_coordinate.txt  coordinate.txt  final_model.pt  lasso_loss.npy  loss_list.npy  loss_slices.npy  model_epoch_10000.pt  model_epoch_15000.pt  model_epoch_5000.pt
demo/16_villi/lasso0.001/rep1/: 10000_coordinate.txt  15000_coordinate.txt  5000_coordinate.txt  coordinate.txt  final_model.pt  lasso_loss.npy  loss_list.npy  loss_slices.npy  model_epoch_10000.pt  model_epoch_15000.pt  model_epoch_5000.pt
demo/16_villi/lasso0.001/rep2/: 10000_coordinate.txt  15000_coordinate.txt  5000_coordinate.txt  coordinate.txt  final_model.pt  lasso_loss.npy  loss_list.npy  (+5 more)
demo/data/: filtered_features.tsv
demo/intestine/: livm_meta.xlsx  m163-165_neg_02_cluster_ep_n4_processed.csv  m163-165_neg_02_cluster_ep_n4_tgt.csv
demo/paper_results/: loss0.03569_exp0.03339_nhs80_nhalin_trial0_lasso0.007_coordinate.txt
src/: data_processing.py  multi_gaston.py  plotting.py
src/multi_gaston/: __main__.py  data_processing.py  multi_gaston.py  plotting.py  process_NN_output.py  sketch.py  svg_fitting.py
src/multi_gaston.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/multi_gaston/.ipynb_checkpoints/: data_processing-checkpoint.py  data_processing_ST-checkpoint.py
(+197 files in other folders)
